Fixed focus visibility of the top cards

--- a/apps/web-mzima-client/src/app/shared/components/collections/collections.component.scss
+++ b/apps/web-mzima-client/src/app/shared/components/collections/collections.component.scss
@@ -34,7 +34,7 @@
 .collection-list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 -8px -24px;
+  margin: 2px -8px -24px;
   justify-content: flex-start;
 
   @include breakpoint-max($tablet) {
